Allow script a/g to access all single-storey variants of `a`/`g`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1857,7 +1857,6 @@ selectorAffix.W = "curly"
 selectorAffix."W/sansSerif" = "curly"
 selectorAffix.WHookTop = "curly"
 
-
 [prime.capital-w.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
@@ -2149,12 +2148,12 @@ descriptionAffix = "double-storey body"
 selectorAffix.a = "doubleStorey"
 selectorAffix."ae/a" = "doubleStorey"
 selectorAffix."a/sansSerif" = "doubleStorey"
-selectorAffix."a/rtailBase" = "doubleStorey"
+selectorAffix."aRetroflexHook" = "doubleStorey"
 selectorAffix."a/doubleStorey" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
-selectorAffix."aScript/autoSerifed/slab" = "singleStoreyTopCut"
-selectorAffix."aScript/autoSerifed/sans" = "singleStoreyTopCut"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "singleStorey"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "singleStorey"
 
 [prime.a.variants-buildup.stages.storey.single-storey]
 rank = 2
@@ -2163,12 +2162,12 @@ descriptionAffix = "single-storey body"
 selectorAffix.a = "singleStorey"
 selectorAffix."ae/a" = "doubleStorey"
 selectorAffix."a/sansSerif" = "singleStorey"
-selectorAffix."a/rtailBase" = "singleStorey"
+selectorAffix."aRetroflexHook" = "singleStorey"
 selectorAffix."a/doubleStorey" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
-selectorAffix."aScript/autoSerifed/slab" = "singleStorey"
-selectorAffix."aScript/autoSerifed/sans" = "singleStorey"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "singleStorey"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "singleStorey"
 
 [prime.a.variants-buildup.stages.double-storey-hook."*"]
 next = "bar"
@@ -2180,12 +2179,12 @@ descriptionAffix = "serifless hook"
 selectorAffix.a = ""
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
-selectorAffix."a/rtailBase" = ""
+selectorAffix."aRetroflexHook" = ""
 selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
-selectorAffix."aScript/autoSerifed/slab" = ""
-selectorAffix."aScript/autoSerifed/sans" = ""
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = ""
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.double-storey-hook.hook-serifed]
 rank = 2
@@ -2194,12 +2193,12 @@ descriptionAffix = "serifed hook"
 selectorAffix.a = "hookInwardSerifed"
 selectorAffix."ae/a" = "hookInwardSerifed"
 selectorAffix."a/sansSerif" = ""
-selectorAffix."a/rtailBase" = "hookInwardSerifed"
+selectorAffix."aRetroflexHook" = "hookInwardSerifed"
 selectorAffix."a/doubleStorey" = "hookInwardSerifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
-selectorAffix."aScript/autoSerifed/slab" = ""
-selectorAffix."aScript/autoSerifed/sans" = ""
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = ""
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear."*"]
 next = "bar"
@@ -2210,12 +2209,12 @@ keyAffix = ""
 selectorAffix.a = ""
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
-selectorAffix."a/rtailBase" = ""
+selectorAffix."aRetroflexHook" = ""
 selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
-selectorAffix."aScript/autoSerifed/slab" = "topCut"
-selectorAffix."aScript/autoSerifed/sans" = "topCut"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = ""
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear.top-cut]
 rank = 2
@@ -2223,12 +2222,12 @@ descriptionAffix = "a diagonal cut at top"
 selectorAffix.a = "topCut"
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = "topCut"
-selectorAffix."a/rtailBase" = "topCut"
+selectorAffix."aRetroflexHook" = "topCut"
 selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "topCut"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "topCut"
-selectorAffix."aScript/autoSerifed/slab" = "topCut"
-selectorAffix."aScript/autoSerifed/sans" = "topCut"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topCut"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "topCut"
 
 [prime.a.variants-buildup.stages.ear.earless-corner]
 rank = 3
@@ -2236,12 +2235,12 @@ descriptionAffix = "earless (cornered top-right)"
 selectorAffix.a = "earlessCorner"
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = "earlessCorner"
-selectorAffix."a/rtailBase" = "earlessCorner"
+selectorAffix."aRetroflexHook" = "earlessCorner"
 selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessCorner"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessCorner"
-selectorAffix."aScript/autoSerifed/slab" = "topCut"
-selectorAffix."aScript/autoSerifed/sans" = "topCut"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "earlessCorner"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "earlessCorner"
 
 [prime.a.variants-buildup.stages.ear.earless-rounded]
 rank = 4
@@ -2249,12 +2248,12 @@ descriptionAffix = "earless (rounded top-right)"
 selectorAffix.a = "earlessRounded"
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = "earlessRounded"
-selectorAffix."a/rtailBase" = "earlessRounded"
+selectorAffix."aRetroflexHook" = "earlessRounded"
 selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessRounded"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessRounded"
-selectorAffix."aScript/autoSerifed/slab" = "topCut"
-selectorAffix."aScript/autoSerifed/sans" = "topCut"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "earlessRounded"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "earlessRounded"
 
 [prime.a.variants-buildup.stages.bar.serifless]
 rank = 1
@@ -2263,12 +2262,12 @@ descriptionJoiner = "without"
 selectorAffix.a = "serifless"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
-selectorAffix."a/rtailBase" = "serifless"
+selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
-selectorAffix."aScript/autoSerifed/slab" = "serifless"
-selectorAffix."aScript/autoSerifed/sans" = "serifless"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "serifless"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.serifed]
 rank = 2
@@ -2276,12 +2275,12 @@ descriptionAffix = "serif at terminal"
 selectorAffix.a = "serifed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
-selectorAffix."a/rtailBase" = "serifless"
+selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "serifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifed"
-selectorAffix."aScript/autoSerifed/slab" = "serifed"
-selectorAffix."aScript/autoSerifed/sans" = "serifed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "topSerifed", else = "serifless" }
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.double-serifed]
 rank = 3
@@ -2290,12 +2289,12 @@ descriptionAffix = "serifs at top and bottom"
 selectorAffix.a = "doubleSerifed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
-selectorAffix."a/rtailBase" = "topSerifed"
+selectorAffix."aRetroflexHook" = "topSerifed"
 selectorAffix."a/doubleStorey" = "serifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "doubleSerifed"
-selectorAffix."aScript/autoSerifed/slab" = "serifed"
-selectorAffix."aScript/autoSerifed/sans" = "serifed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "topSerifed"
 
 [prime.a.variants-buildup.stages.bar.tailed]
 rank = 4
@@ -2303,12 +2302,12 @@ descriptionAffix = "curly tail"
 selectorAffix.a = "tailed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "tailed"
-selectorAffix."a/rtailBase" = "serifless"
+selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "tailed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "tailedSerifed", else = "tailed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailed"
-selectorAffix."aScript/autoSerifed/slab" = "tailed"
-selectorAffix."aScript/autoSerifed/sans" = "tailed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "topSerifed", else = "serifless" }
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.tailed-serifed]
 rank = 5
@@ -2317,12 +2316,12 @@ descriptionAffix = "curly tail; with serifs at top and bottom"
 selectorAffix.a = "tailedSerifed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "tailed"
-selectorAffix."a/rtailBase" = "topSerifed"
+selectorAffix."aRetroflexHook" = "topSerifed"
 selectorAffix."a/doubleStorey" = "tailed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "tailedSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailedSerifed"
-selectorAffix."aScript/autoSerifed/slab" = "tailed"
-selectorAffix."aScript/autoSerifed/sans" = "tailed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "topSerifed"
 
 [prime.a.variants-buildup.stages.bar.toothless-corner]
 rank = 6
@@ -2331,12 +2330,12 @@ descriptionAffix = "toothless (cornered bottom-right)"
 selectorAffix.a = "toothlessCorner"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessCorner"
-selectorAffix."a/rtailBase" = "serifless"
+selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "toothlessCorner"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
-selectorAffix."aScript/autoSerifed/slab" = "serifed"
-selectorAffix."aScript/autoSerifed/sans" = "serifless"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.toothless-rounded]
 rank = 7
@@ -2345,12 +2344,12 @@ descriptionAffix = "toothless (rounded bottom-right)"
 selectorAffix.a = "toothlessRounded"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessRounded"
-selectorAffix."a/rtailBase" = "serifless"
+selectorAffix."aRetroflexHook" = "serifless"
 selectorAffix."a/doubleStorey" = "toothlessRounded"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
-selectorAffix."aScript/autoSerifed/slab" = "serifed"
-selectorAffix."aScript/autoSerifed/sans" = "serifless"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/slab" = "topSerifed"
+selectorAffix."aRetroflexHook/singleStorey/autoSerifed/sans" = "serifless"
 
 
 
@@ -2802,7 +2801,8 @@ selectorAffix."g/sansSerif" = "doubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreyBentHookSerifless"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "singleStoreyBentHookSerifed"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "singleStoreyBentHookSerifless"
-selectorAffix.gScript = "singleStoreyBentHookTopCut"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "singleStoreyBentHookSerifed"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "singleStoreyBentHookSerifless"
 
 [prime.g.variants-buildup.stages.openness."*"]
 next = "END"
@@ -2815,7 +2815,8 @@ selectorAffix."g/sansSerif" = "closed"
 selectorAffix."g/hookTopBase" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = ""
 selectorAffix."g/singleStorey/autoSerifed/sans" = ""
-selectorAffix.gScript = ""
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = ""
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = ""
 
 [prime.g.variants-buildup.stages.openness.open]
 rank = 1
@@ -2825,7 +2826,8 @@ selectorAffix."g/sansSerif" = "open"
 selectorAffix."g/hookTopBase" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = ""
 selectorAffix."g/singleStorey/autoSerifed/sans" = ""
-selectorAffix.gScript = ""
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = ""
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = ""
 
 [prime.g.variants-buildup.stages.storey.single-storey]
 next = "hook"
@@ -2836,7 +2838,8 @@ selectorAffix."g/sansSerif" = "singleStorey"
 selectorAffix."g/hookTopBase" = "singleStorey"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "singleStorey"
-selectorAffix.gScript = "singleStorey"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "singleStorey"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "singleStorey"
 
 [prime.g.variants-buildup.stages.hook."*"]
 next = "ear"
@@ -2849,7 +2852,8 @@ selectorAffix."g/sansSerif" = "bentHook"
 selectorAffix."g/hookTopBase" = "bentHook"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "bentHook"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "bentHook"
-selectorAffix.gScript = "bentHook"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "bentHook"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "bentHook"
 
 [prime.g.variants-buildup.stages.hook.flat-hook]
 rank = 2
@@ -2859,7 +2863,8 @@ selectorAffix."g/sansSerif" = "flatHook"
 selectorAffix."g/hookTopBase" = "flatHook"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "flatHook"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "flatHook"
-selectorAffix.gScript = "flatHook"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "bentHook"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "bentHook"
 
 [prime.g.variants-buildup.stages.ear.serifless]
 rank = 1
@@ -2868,7 +2873,8 @@ selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "serifless"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "serifless"
-selectorAffix.gScript = "topCut"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "serifless"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "serifless"
 
 [prime.g.variants-buildup.stages.ear.serifed]
 rank = 2
@@ -2878,7 +2884,8 @@ selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "serifed"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "serifed"
-selectorAffix.gScript = "topCut"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "serifed"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "serifed"
 
 [prime.g.variants-buildup.stages.ear.top-cut]
 rank = 3
@@ -2888,7 +2895,8 @@ selectorAffix."g/sansSerif" = "topCut"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "topCut"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "topCut"
-selectorAffix.gScript = "topCut"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "topCut"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "topCut"
 
 [prime.g.variants-buildup.stages.ear.earless-corner]
 rank = 4
@@ -2898,7 +2906,8 @@ selectorAffix."g/sansSerif" = "earlessCorner"
 selectorAffix."g/hookTopBase" = "earlessCornerHTB"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "earlessCorner"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "earlessCorner"
-selectorAffix.gScript = "topCut"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "earlessCorner"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "earlessCorner"
 
 [prime.g.variants-buildup.stages.ear.earless-rounded]
 rank = 5
@@ -2908,7 +2917,8 @@ selectorAffix."g/sansSerif" = "earlessRounded"
 selectorAffix."g/hookTopBase" = "serifless"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "earlessRounded"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "earlessRounded"
-selectorAffix.gScript = "topCut"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/slab" = "earlessRounded"
+selectorAffix."g/singleStoreyBentHook/autoSerifed/sans" = "earlessRounded"
 
 
 
@@ -4799,7 +4809,6 @@ descriptionAffix = "cursive shape"
 selectorAffix.w = "cursive"
 selectorAffix."w/sansSerif" = "cursive"
 selectorAffix.wHookTop = "cursive"
-
 
 [prime.w.variants-buildup.stages.serifs.serifless]
 rank = 1
