Add full-serifed variants for `K` and `k`, and related letters (#2696).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1192,6 +1192,14 @@ selectorAffix.K = "serifed"
 selectorAffix."K/sansSerif" = "serifless"
 selectorAffix.KDescender = "serifed"
 
+[prime.capital-k.variants-buildup.stages.serifs.full-serifed]
+rank = 6
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "full serifs at legs"
+selectorAffix.K = "fullSerifed"
+selectorAffix."K/sansSerif" = "serifless"
+selectorAffix.KDescender = "fullSerifed"
+
 
 
 [prime.capital-l]
@@ -3333,6 +3341,18 @@ selectorAffix."latn/kappa" = "serifedKra"
 selectorAffix.kHookTop = "serifed"
 selectorAffix.kDescender = "serifed"
 selectorAffix."grek/kappa" = "serifedKappa"
+selectorAffix."grek/kappa/sansSerif" = "serifless"
+
+[prime.k.variants-buildup.stages.serifs.full-serifed]
+rank = 6
+nonBreakingVariantAdditionPriority = 100
+descriptionAffix = "full serifs at legs"
+selectorAffix.k = "fullSerifed"
+selectorAffix."k/sansSerif" = "serifless"
+selectorAffix."latn/kappa" = "fullSerifedKra"
+selectorAffix.kHookTop = "fullSerifed"
+selectorAffix.kDescender = "fullSerifed"
+selectorAffix."grek/kappa" = "fullSerifedKappa"
 selectorAffix."grek/kappa/sansSerif" = "serifless"
 
 
