--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3346,6 +3346,7 @@ selectorAffix."grek/kappa/sansSerif" = "serifless"
 [prime.k.variants-buildup.stages.serifs.full-serifed]
 rank = 6
 nonBreakingVariantAdditionPriority = 100
+disableIf = [ { body = "diagonal-tailed-cursive" } ]
 descriptionAffix = "full serifs at legs"
 selectorAffix.k = "fullSerifed"
 selectorAffix."k/sansSerif" = "serifless"
