--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6359,12 +6359,12 @@ tagKind = "letter"
 
 [prime.partial-derivative.variants.straight-bar]
 rank = 1
-description = "Partial derivative symbol (`∂`) with a straight upper bar"
+description = "Partial derivative symbol (`∂`) with a straight bar"
 selector."partial" = "straight-bar"
 
 [prime.partial-derivative.variants.curly-bar]
 rank = 2
-description = "Partial derivative symbol (`∂`) with a curly upper bar"
+description = "Partial derivative symbol (`∂`) with a curly bar"
 selector."partial" = "curly-bar"
 
 [prime.partial-derivative.variants.closed-contour]
@@ -9375,12 +9375,12 @@ y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "flat-hook-serifless"
 eszet = "longs-s-lig-serifless"
+lower-eth = "straight-bar"
 lower-beta = "standard"
 lower-theta = "oval"
-lower-chi = "semi-chancery-straight-serifless"
-lower-eth = "straight-bar"
 lower-lambda = "tailed-turn"
 lower-phi = "straight"
+lower-chi = "semi-chancery-straight-serifless"
 partial-derivative = "closed-contour"
 cyrl-a = "double-storey-serifless"
 cyrl-ve = "standard-serifless"
