Cleanup of `kHookTop` and `cyrl/kaBashkir`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3358,7 +3358,7 @@ descriptionAffix = "serifs at top left and both legs"
 selectorAffix.k = "triSerifed"
 selectorAffix."k/sansSerif" = "serifless"
 selectorAffix."latn/kappa" = "triSerifed"
-selectorAffix.kHookTop = "triSerifed"
+selectorAffix.kHookTop = "topRightAndBottomRightSerifed"
 selectorAffix.kDescender = "topLeftAndTopRightSerifed"
 
 [prime.k.variants-buildup.stages.serifs.serifed]
@@ -7011,7 +7011,7 @@ selectorAffix."cyrl/Ka" = "triSerifed"
 selectorAffix."cyrl/KaDescender" = "topLeftAndTopRightSerifed"
 selectorAffix."cyrl/KaVBar" = "triSerifed"
 selectorAffix."cyrl/KaHook" = "topLeftAndTopRightSerifed"
-selectorAffix."cyrl/KaBashkir" = "triSerifed"
+selectorAffix."cyrl/KaBashkir" = "topRightAndBottomRightSerifed"
 
 [prime.cyrl-capital-ka.variants-buildup.stages.serifs.serifed]
 rank = 7
@@ -7127,7 +7127,7 @@ selectorAffix."cyrl/ka" = "triSerifed"
 selectorAffix."cyrl/kaDescender" = "topLeftAndTopRightSerifed"
 selectorAffix."cyrl/kaVBar" = "triSerifed"
 selectorAffix."cyrl/kaHook" = "topLeftAndTopRightSerifed"
-selectorAffix."cyrl/kaBashkir" = "triSerifed"
+selectorAffix."cyrl/kaBashkir" = "topRightAndBottomRightSerifed"
 
 [prime.cyrl-ka.variants-buildup.stages.serifs.serifed]
 rank = 7
